--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<h2>Nocna zmiana</h2> 
 		<p>Kawy kawy kawy</p>
 	<div class="col-1">Nie czas dziś na kawały i na żarty płoche 1. </div>
-		<div class="col-2">Nie czas dziś na kawały i na żarty płoche 2. </div>
+		<div class="col-2">Zawsze na czasie 2. </div>
 		<div class="col- 3">Nie czas dziś na kawały i na żarty płoche 3. </div>
 	<div class="row">
 		<div class="col-4">Nie czas dziś na kawały i na żarty płoche 4.</div>
