--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<div class="row">
 		<h2>Nocna zmiana</h2> 
 		<p>Kawy kawy kawy</p>
-	<div class="col-1">Nie czas dziś na kawały i na żarty płoche 1. </div>
+	<div class="col-1">Przespać ciurkiem chociaż jedną noc. Zanurzć się w letargu, i nieczuła na głosy, spać do jedenastej lub trzynastej.</div>
 		<div class="col-2">Zawsze na czasie 2. </div>
 		<div class="col- 3">Nie czas dziś na kawały i na żarty płoche 3. </div>
 	<div class="row">
