--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<p>Kawy kawy kawy</p>
 	<div class="col-1">Przespać ciurkiem chociaż jedną noc. Zanurzć się w letargu, i nieczuła na głosy, spać do jedenastej lub trzynastej.</div>
 		<div class="col-2">Zawsze na czasie 2. </div>
-		<div class="col- 3">Nie czas dziś na kawały i na żarty płoche 3. </div>
+		<div class="col- 3">Niestety.Żaden nielat do lat 5 nie zna kompromisów. </div>
 	<div class="row">
-		<div class="col-4">Nie czas dziś na kawały i na żarty płoche 4.</div>
+		<div class="col-4">Nielaty o świcie nie dbają o kompromisy.Ruszają z życiem. Swoimi różowymi stópkami ruszają w świat podrywając ze snu cała rodzinę powyżej lat 30stu. .</div>
 		<div class="col-5">Nie czas dziś na kawały i na żarty płoche 5  </div>
 		<div class="col-6">Nie czas dziś na kawały i na żarty płoche 5  </div>
 	
