--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="col- 3">Niestety.Żaden nielat do lat 5 nie zna kompromisów. </div>
 	<div class="row">
 		<div class="col-4">Nielaty o świcie nie dbają o kompromisy.Ruszają z życiem. Swoimi różowymi stópkami ruszają w świat podrywając ze snu cała rodzinę powyżej lat 30stu. .</div>
-		<div class="col-5">Nie czas dziś na kawały i na żarty płoche 5  </div>
+		<div class="col-5">Umpa umpa ruszają na podbój kolejnego dnia.</div>
 		<div class="col-6">Nie czas dziś na kawały i na żarty płoche 5  </div>
 	
 	</div>
